--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I’m Uygartatar</h1>
+  <h1>anani sikem efe</h1>
   <script src="script.js"></script>
 </body>
 </html>
